syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.wixpress.dst.greyhound.sidecar.api.v1";

import "google/protobuf/wrappers.proto";
package com.wixpress.dst.greyhound.sidecar.api.v1;

service GreyhoundSidecarUser {
  rpc HandleMessages (HandleMessagesRequest) returns (HandleMessagesResponse);
  rpc KeepAlive (KeepAliveRequest) returns (KeepAliveResponse);
}

message HandleMessagesRequest {
  string group = 1;
  string topic = 2;
  repeated Record records = 3;
}

message Record {
  int32 partition = 1;
  int64 offset = 2;
  google.protobuf.StringValue payload = 3;
  map<string, google.protobuf.StringValue> headers = 4;
  google.protobuf.StringValue key = 5;
}

message HandleMessagesResponse {
}

message KeepAliveRequest {
}

message KeepAliveResponse {
}
